--- a/app.less
+++ b/app.less
@@ -2,6 +2,8 @@ body, html {
   height: 100%;
   min-width: 320px;
   overflow: auto;
+  font-size: 12px;
+  font-family: 'Fira Mono', "PingFang SC", "Microsoft YaHei", sans-serif;
 }
 *, *::before, *::after {
   box-sizing: border-box;
@@ -12,6 +14,10 @@ body, html {
   text-align: right;
 }
 
+.ace_editor {
+  font-family: 'Fira Mono', 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace !important;
+}
+
 /* start da css for da buttons */
 .btn {
   border: none;
@@ -20,6 +26,7 @@ body, html {
   padding: 2px 15px;
   font-size: 12px;
   text-decoration: none;
+  background: #aaa;
   color: #fff;
   position: relative;
   display: inline-block;
